--- a/Yotube.html
+++ b/Yotube.html
@@ -11,53 +11,53 @@
     <main>
         <header class="encabezado">
             <figure class="tresrayas">
-              <img src="/proyecto/ImagenesProyect/tresrayasb.png" alt="">
+              <img src="/ImagenesProyect/tresrayasb.png" alt="">
              </figure>
              <figure class="logotipo">
-              <img src="/proyecto/ImagenesProyect/logotipo.PNG" alt="">
+              <img src="/ImagenesProyect/logotipo.PNG" alt="">
              </figure>
         <p class="buscar">Buscar</p>
          <figure class="simbolo icon lupa">
-            <img src="/proyecto/ImagenesProyect/buscador2.png" alt="">
+            <img src="/ImagenesProyect/buscador2.png" alt="">
             <div class="tooltrip">Buscar</div>
          </figure>
         <section>
             
         </section>
         <figure class="simbolo icon microfono">
-            <img src="/proyecto/ImagenesProyect/microa.png" alt="">
+            <img src="/ImagenesProyect/microa.png" alt="">
             <div class="tooltrip">Realiza búsquedas con la voz</div>
         </figure>
         <section></section>
         <figure class="icon trespuntos">
-            <img src="/proyecto/ImagenesProyect/trespuntos.PNG" alt="">
+            <img src="ImagenesProyect/trespuntos.PNG" alt="">
             <div class="tooltrip">Configuración</div>
         </figure>
 
         <figure class="acceder">
-            <img src="/proyecto/ImagenesProyect/accederb.png" alt="">
+            <img src="/ImagenesProyect/accederb.png" alt="">
         </figure>
         </header>
         <article class="info">
             <section class="botones">
                 <div class="principal">
-                    <img src="/proyecto/ImagenesProyect/principalb.png" alt="">
+                    <img src="/ImagenesProyect/principalb.png" alt="">
                     <p>Principal</p>
                 </div>
                 <div class="shorts">
-                    <img src="/proyecto/ImagenesProyect/shortsb.png" alt="">
+                    <img src="/ImagenesProyect/shortsb.png" alt="">
                     <p>Shorts</p>
                 </div>
                 <div class="suscripciones">
-                    <img src="/proyecto/ImagenesProyect/suscripcionesb.png" alt="">
+                    <img src="/ImagenesProyect/suscripcionesb.png" alt="">
                     <p>suscripciones</p>
                 </div>
                 <div class="biblioteca">
-                    <img src="/proyecto/ImagenesProyect/bibliotecab.png" alt="">
+                    <img src="/ImagenesProyect/bibliotecab.png" alt="">
                     <p>Biblioteca</p>
                 </div>
                 <div class="historial">
-                    <img src="/proyecto/ImagenesProyect/historialb.png" alt="">
+                    <img src="/ImagenesProyect/historialb.png" alt="">
                     <p>Historial</p>
                 </div>
 
@@ -81,19 +81,19 @@
                 <section class="centro">
                     <aside class="girar">
                         <figure class="mexico movil" id="mex">
-                             <img src="/proyecto/ImagenesProyect/videosuperior.PNG" alt="">
+                             <img src="/ImagenesProyect/videosuperior.PNG" alt="">
                         </figure>
                         <figure class="anuncio movil" id="anun">
-                              <img src="/proyecto/ImagenesProyect/videosuperior2.PNG" alt="">
+                              <img src="/ImagenesProyect/videosuperior2.PNG" alt="">
                         </figure>
                     </aside>
                     <section class="suburban">
                         <figure class="carro">
-                            <img src="/proyecto/ImagenesProyect/anuncio.PNG" alt="">
+                            <img src="/ImagenesProyect/anuncio.PNG" alt="">
                         </figure>
                         <section class="venta">
                             <figure class="logow">
-                                 <img src="/proyecto/ImagenesProyect/logotipow.PNG" alt="">
+                                 <img src="/ImagenesProyect/logotipow.PNG" alt="">
                             </figure>
                             <section class="infoventa">
                                  <p> <b>#SUVW para ganar</b></p>
@@ -107,29 +107,29 @@
                 </section>
                 <section class="recomendaciones">
                     <div class="videos dana">
-                        <img src="/proyecto/ImagenesProyect/recomendacion1.PNG" alt="">
+                        <img src="/ImagenesProyect/recomendacion1.PNG" alt="">
                         <div class="danasin">
-                            <img src="/proyecto/ImagenesProyect/recomendacion1hov.PNG" alt="">
+                            <img src="/ImagenesProyect/recomendacion1hov.PNG" alt="">
                         </div>
                         <p><b>Mi Mix</b></p>
                         <p>Bad Bunny y muchos más</p>
                     </div>
                     <div class="videos juanes">
-                        <img src="/proyecto/ImagenesProyect/recomendacion2.PNG" alt="">
+                        <img src="/ImagenesProyect/recomendacion2.PNG" alt="">
                         <div class="juanesin">
-                            <img src="/proyecto/ImagenesProyect/recomendacion2hov.PNG" alt="">
+                            <img src="/ImagenesProyect/recomendacion2hov.PNG" alt="">
                         </div>
                         <p><b>Mix: Juanes,Nelly Furtado - Fotografía (Official Music Video)</b></p>
                         <p>Nelly Furtado, Juanes y muchos más</p>
                     </div>
                     <div class="videos hash">
-                        <img src="/proyecto/ImagenesProyect/recomedacion3b.PNG" alt="">
+                        <img src="/ImagenesProyect/recomedacion3b.PNG" alt="">
                         <div class="hashin">
-                            <img src="/proyecto/ImagenesProyect/seguir.PNG" alt="">
+                            <img src="/ImagenesProyect/seguir.PNG" alt="">
                         </div>
                         <section class="venta">
                             <figure class="youtuber">
-                                 <img src="/proyecto/ImagenesProyect/youtuber.PNG" alt="">
+                                 <img src="/ImagenesProyect/youtuber.PNG" alt="">
                             </figure>
                             <section class="infovideo">
                                  <p><b>Ha Ash, Reik, Rio Roma, Camila, Yuridia, Sin Bandera, Carlos...</b></p>
@@ -140,7 +140,7 @@
                                      <p>1997 lo están viendo</p>  
                                     </section>
                                     <figure class="envivo">
-                                        <img src="/proyecto/ImagenesProyect/envivo.PNG" alt="">
+                                        <img src="/ImagenesProyect/envivo.PNG" alt="">
                                    </figure>
                                 </section>
                             </section>
@@ -148,10 +148,10 @@
                     </div>
                     <div class="videos morat">
                         <div class="moratout">
-                         <img src="/proyecto/ImagenesProyect/recomendacion4b.PNG" alt="">
+                         <img src="/ImagenesProyect/recomendacion4b.PNG" alt="">
                         </div>
                         <div class="moratin">
-                         <img src="/proyecto/ImagenesProyect/recomendacion4hov.PNG" alt="">
+                         <img src="/ImagenesProyect/recomendacion4hov.PNG" alt="">
                         </div>
                         <p><b>Mix: Morat - Acuérdate de mi</b></p>
                         <p> Morat, Sebastián Yatra, Nabález y muchos   más</p>
